# FastHETrace

./: .gitignore  CMakeLists.txt  README.md  init.sh
cost_analysis/: HKcost.py  Util.py  breakdown_analysis.py  cost_analysis_base.py  cost_analysis_helper.py  cost_basic.py  hoist1_vs_hoist2_IP_vs_hoist.py  proof.py  run_plot_fig1_ell_vs_rate.py  run_plot_fig2_fig3_dominant.py  run_plot_fig4_storage_various_M.py  storage.py
cost_analysis/BehaviorGh/: Gh_div_h.py  behavior_gh.py  gh_behavior.py  gh_vs_ghm1_bound.py  gh_vs_gm.py  part_of_ggh.py  storage_cost_behavior.py
cost_analysis/FloorAndMod/: MdivH_vs_MdivHm1.py  MmodH_vs_MmodHm1.py
cost_analysis/RateProof/: alpha_beta.py  arejan.py  ch_cip_rate.py  ch_cip_rate_via_diff.py  ch_cip_rate_via_diff2.py  proof.py  proof_M15.txt  proof_M2.txt  proof_M7.txt  proof_Ms.txt  simple_loop_unroll_general.py
include/: automo_opt.hpp  hoist.hpp  mem_usage.h  stat.hpp  trace_keygen.hpp
src/: CMakeLists.txt  bench_seq.cpp  bench_seq_dynamic_dnum.cpp  bench_unroll.cpp  benchunroll_dynamic_dnum.cpp
